Review music arrangement section

--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -1,4 +1,12 @@
 
+@misc{nasa_golden_2024,
+	title = {Golden {Record} {Sounds} and {Music} - {NASA} {Science}},
+	url = {https://science.nasa.gov/mission/voyager/golden-record-contents/sounds/},
+	urldate = {2025-04-17},
+	month = apr,
+	year = {2024},
+}
+
 @article{finley_quantum_2017,
 	title = {Quantum {Computing} {Is} {Real}, and {D}-{Wave} {Just} {Open}-{Sourced} {It}},
 	issn = {1059-1028},
@@ -228,9 +236,7 @@
 
 @misc{preskill_supremacy_2012,
 	title = {Quantum computing and the entanglement frontier},
-	url = {http://arxiv.org/abs/1203.5813},
 	doi = {10.48550/arXiv.1203.5813},
-	urldate = {2025-04-17},
 	publisher = {arXiv},
 	author = {Preskill, John},
 	month = nov,
@@ -242,7 +248,6 @@
 	title = {Simulating physics with computers},
 	volume = {21},
 	issn = {1572-9575},
-	url = {https://doi.org/10.1007/BF02650179},
 	doi = {10.1007/BF02650179},
 	number = {6},
 	urldate = {2025-04-17},
