Review framework section

--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -1,4 +1,14 @@
 
+@inproceedings{chiu_automatic_2009,
+	title = {Automatic {System} for the {Arrangement} of {Piano} {Reductions}},
+	doi = {10.1109/ISM.2009.105},
+	booktitle = {2009 11th {IEEE} {International} {Symposium} on {Multimedia}},
+	author = {Chiu, Shih-Chuan and Shan, Man-Kwan and Huang, Jiun-Long},
+	month = dec,
+	year = {2009},
+	pages = {459--464},
+}
+
 @misc{nasa_golden_2024,
 	title = {Golden {Record} {Sounds} and {Music} - {NASA} {Science}},
 	url = {https://science.nasa.gov/mission/voyager/golden-record-contents/sounds/},
