Review results and conclusion

--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -1,4 +1,89 @@
 
+@inproceedings{pearce_towards_2001,
+	title = {Towards {A} {Framework} for the {Evaluation} of {Machine} {Compositions}},
+	author = {Pearce, M. and Wiggins, Geraint A.},
+	year = {2001},
+}
+
+@article{nakamura_statistical_2018,
+	title = {Statistical piano reduction controlling performance difficulty},
+	volume = {7},
+	edition = {13},
+	issn = {2048-7703},
+	doi = {10.1017/ATSIP.2018.18},
+	journal = {APSIPA Transactions on Signal and Information Processing},
+	author = {Nakamura, Eita and Yoshii, Kazuyoshi},
+	month = jan,
+	year = {2018},
+}
+
+
+@report{dwave_reverse,
+	title = {{Reverse} {Annealing} for {Local} {Refinement} of {Solutions}},
+	type = {D-Wave White Paper Series},
+	institution = {D-Wave},
+	year = {2017},
+	number = {14-1018A-A},
+	url = {https://www.dwavesys.com/resources/publications},
+}
+
+@article{izquierdo_advantage_2022,
+	title = {Advantage of pausing: parameter setting for quantum annealers},
+	volume = {18},
+	issn = {2331-7019},
+	doi = {10.1103/PhysRevApplied.18.054056},
+	number = {5},
+	journal = {Physical Review Applied},
+	author = {Izquierdo, Zoe Gonzalez and Grabbe, Shon and Idris, Husni and Wang, Zhihui and Marshall, Jeffrey and Rieffel, Eleanor},
+	month = nov,
+	year = {2022},
+	note = {arXiv:2205.12936 [quant-ph]},
+}
+
+@article{montanez-barrera_unbalanced_2024,
+	title = {Unbalanced penalization: {A} new approach to encode inequality constraints of combinatorial problems for quantum optimization algorithms},
+	volume = {9},
+	issn = {2058-9565},
+	doi = {10.1088/2058-9565/ad35e4},
+	number = {2},
+	journal = {Quantum Science and Technology},
+	author = {Montanez-Barrera, Alejandro and Willsch, Dennis and Maldonado-Romo, Alberto and Michielsen, Kristel},
+	month = apr,
+	year = {2024},
+	note = {arXiv:2211.13914 [quant-ph]},
+}
+
+@misc{dwave_decomposing,
+	title = {{QPU} {Solvers}: {Decomposing} {Large} {Problems} — {D}-{Wave} {System} {Documentation} documentation},
+	url = {https://docs.dwavesys.com/docs/latest/handbook_decomposing.html},
+	urldate = {2025-04-18},
+}
+
+@article{albash_demonstration_2018,
+	title = {Demonstration of a {Scaling} {Advantage} for a {Quantum} {Annealer} over {Simulated} {Annealing}},
+	volume = {8},
+	issn = {2160-3308},
+	doi = {10.1103/PhysRevX.8.031016},
+	number = {3},
+	journal = {Physical Review X},
+	author = {Albash, Tameem and Lidar, Daniel A.},
+	month = jul,
+	year = {2018},
+}
+
+@article{kirkpatrick_optimization_1983,
+	title = {Optimization by {Simulated} {Annealing}},
+	volume = {220},
+	issn = {0036-8075, 1095-9203},
+	doi = {10.1126/science.220.4598.671},
+	number = {4598},
+	journal = {Science},
+	author = {Kirkpatrick, S. and Gelatt, C. D. and Vecchi, M. P.},
+	month = may,
+	year = {1983},
+	pages = {671--680},
+}
+
 @inproceedings{chiu_automatic_2009,
 	title = {Automatic {System} for the {Arrangement} of {Piano} {Reductions}},
 	doi = {10.1109/ISM.2009.105},
